--- a/mensajes.html
+++ b/mensajes.html
@@ -5,8 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/style/mensajes.css">
 </head>
 <body>
-    
+    <div>
+        <h2>Mensajes</h2>
+        <div class="chat"><h5>Maria Dolores</h5>
+        <p>¡Hola! claro, podemos acordar un lugar y hora para que conoscas...</p></div>
+    </div>
 </body>
 </html>
