--- a/pag1.html
+++ b/pag1.html
@@ -5,18 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="/style/style.css">
   </head>
   <body>
-    <div>
-      <img src="/assests/esperando adopción.png" alt="" />
-      <h3>Encuentra tu amigo fiel</h3>
-      <p>
-        Cuando adoptas a una mascota, cosas maravillosas suceden en tu vida. Si
-        estás pensando en tener un nuevo integrante en tu familia; ¡estás en el
-        lugar correcto!
-      </p>
+    <div class="pagina1">
+      <div class="bloque">
+        <img class="ImgAdopcion" src="/assests/esperando adopción.png" alt="" />
+        <h3>Encuentra tu amigo fiel</h3>
+        <p>
+          Cuando adoptas a una mascota, cosas maravillosas suceden en tu vida. Si
+          estás pensando en tener un nuevo integrante en tu familia; ¡estás en el
+          lugar correcto!
+        </p>
+        <a href="/pag2.html" class="fcc-btn">Siguiente</a>
+      </div>
+  
     </div>
-    <a href="/pag2.html" class="fcc-btn">Siguiente</a>
+    
     
   </body>
 </html>
