--- a/pag2.html
+++ b/pag2.html
@@ -5,17 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/style/style.css">
 </head>
 <body>
-    <div>
-        <img src="/assests/Adoptado.png" alt="">
+    <div class="pagina1">
+        <div class="bloque">
+        <img class="ImgAdopcion" src="/assests/Adoptado.png" alt="">
         <h3>Crea una nueva historia</h3>
         <p>Adoptar puede ser una de las experiencias más grandiosas de tu vida, 
             donde compartirás bellos momentos con estos amiguitos fieles,
             tiernos y llenos de amor para regalar.</p>
+            <a href="/index.html" class="fcc-btn">Siguiente</a>
+
+        </div>
     </div>
 
-    <a href="/index.html" class="fcc-btn">Siguiente</a>
 
 
 
