--- a/details.html
+++ b/details.html
@@ -24,16 +24,16 @@
  
 
             <h3>Personalidad</h3>
-        <div style="display:flex">
+        <div class="Cards">
             <div class="card">
-                <img src="./assests/jugueton.png" alt="Avatar" style="width:50%; align-content: center;margin-left: 40px;">
+                <img src="./assests/jugueton.png" alt="Avatar">
                 <div class="container">
-                  <h4><b>John Doe</b></h4>
+                  <h4><b>Historia</b></h4>
                   <p>Architect & Engineer</p>
                 </div>
               </div>
 
-              <div class="card" style="margin-left:100px">
+              <div class="card">
                 <img src="./assests/inquieto.png" alt="Avatar" style="width:50%;margin-left: 40px;">
                 <div class="container">
                   <h4><b>John Doe</b></h4>
@@ -41,7 +41,7 @@
                 </div>
               </div>
 
-              <div class="card" style="margin-left:100px">
+              <div class="card">
                 <img src="./assests/caracteristicas.png" alt="Avatar" style="width:50%;margin-left: 40px;">
                 <div class="container">
                   <h4><b>John Doe</b></h4>
