--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       
 
      
-            <div>  <a href="index.html">  <img  class="icon" src="https://img.icons8.com/external-flatart-icons-outline-flatarticons/55/000000/external-home-instagram-flatart-icons-outline-flatarticons.png"/></a> </div>
+            <div>  <a href="pag1.html">  <img  class="icon" src="https://img.icons8.com/external-flatart-icons-outline-flatarticons/55/000000/external-home-instagram-flatart-icons-outline-flatarticons.png"/></a></div>
             <div>  <a href="mensajes.html"> <img src="https://img.icons8.com/ios/55/000000/speech-bubble-with-dots.png"/></a></div>
             <div> <a href="favoritos.html"> <img src="https://img.icons8.com/ios-glyphs/55/000000/hearts.png"/></a></div>
                 <div>   <a href="user.html"> <img src="https://img.icons8.com/external-kiranshastry-lineal-kiranshastry/55/000000/external-user-interface-kiranshastry-lineal-kiranshastry-1.png"/>
